--- a/style.css
+++ b/style.css
@@ -350,85 +350,8 @@
 
 /* responsive code start*/
 
-/* max-width 600px */
-@media screen and (max-width: 600px){
-    .section3, .section2, .footer{
-        flex-direction: column;
-        /* padding-left: 10%; */
-    }
+/* responsive code start*/
 
-    .section3 .info p, .section2 .info p{
-        font-size: 1rem;
-    }
-
-    .section3 .courses, .section2 .cards, .footer .boxes{
-        flex-direction: column;
-        padding: 1%;
-    }
-
-    .section3 .courses .cours, .section2 .cards .card{
-        margin: 3% 0;
-    }
-
-    .footer .boxes .box{
-        width: 50vw;
-        margin: 3% auto;
-    }
-
-    .section3 .courses .cours img{
-        height: 10%;
-        width: 40%;
-    }
-
-    .section3 .courses .cours p{
-        margin: 5% 3%;
-    }
-
-    .section3 .courses .cours .button{
-        margin: 2% 0;
-        font-size: .8rem;
-    }
-
-    .section3 .notice .eng{
-        font-size: 1rem;
-    }
-
-    .section2 .cards .card h1{
-        transform: translateY(0);
-    }
-
-    .section2 .cards .card p{
-        transform: translateY(0);
-    }
-
-    .footer .boxes .box{
-        width: 80vw;
-    }
-
-    /* .footer .boxes .box3 .social-icon ul{
-        background: gray;
-    } */
-    
-    .footer .boxes .box3 .social-icon ul li a{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .footer .boxes .box3 .social-icon ul li a img{
-        height: 40%;
-        width: 40%;
-    }
-
-    .footer .copyright{
-        /* background: gray; */
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-    }
-}
-
-/* max-width 1102px */
 @media screen and (max-width: 1102px){
     .section3, .section2{
         padding: 1% 0%;
@@ -541,8 +464,8 @@
     }
 
     .footer .boxes .box3 .social-icon ul li a img{
-        height: 40%;
-        width: 40%;
+        height: 30%;
+        width: 25%;
     }
 
     .footer .copyright{
@@ -551,6 +474,83 @@
         align-items: center;
         flex-direction: column;
     }    
+}
+
+@media screen and (max-width: 600px){
+    .section3, .section2, .footer{
+        flex-direction: column;
+        /* padding-left: 10%; */
+    }
+
+    .section3 .info p, .section2 .info p{
+        font-size: 1rem;
+    }
+
+    .section3 .courses, .section2 .cards, .footer .boxes{
+        flex-direction: column;
+        padding: 1%;
+    }
+
+    .section3 .courses .cours, .section2 .cards .card{
+        margin: 3% 0;
+    }
+
+    .footer .boxes .box{
+        width: 50vw;
+        margin: 3% auto;
+    }
+
+    .section3 .courses .cours img{
+        height: 10%;
+        width: 40%;
+    }
+
+    .section3 .courses .cours p{
+        margin: 5% 3%;
+    }
+
+    .section3 .courses .cours .button{
+        margin: 2% 0;
+        font-size: .8rem;
+    }
+
+    .section3 .notice .eng{
+        font-size: 1rem;
+    }
+
+    .section2 .cards .card h1{
+        transform: translateY(0);
+    }
+
+    .section2 .cards .card p{
+        transform: translateY(0);
+    }
+
+    .footer .boxes .box{
+        width: 80vw;
+    }
+
+    /* .footer .boxes .box3 .social-icon ul{
+        background: gray;
+    } */
+    
+    .footer .boxes .box3 .social-icon ul li a{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .footer .boxes .box3 .social-icon ul li a img{
+        height: 25%;
+        width: 25%;
+    }
+
+    .footer .copyright{
+        /* background: gray; */
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
 }
 
 /* responsive code over */
