--- a/style.css
+++ b/style.css
@@ -59,13 +59,8 @@
 }
 /* slider section css over */
 
-/* section2 css start */
-
-
-/* section2 css over */
-
 /* section3 css start */
-.section3, .section2{
+.section3, .section2, .sec1AU, .sec2AU, .secCrs{
     position: relative;
     margin: 0;
     padding: 1% 4%;
@@ -99,7 +94,7 @@
     /* background: slateblue; */
 }
 
-.section3 .courses .cours, .section2 .cards .card{
+.section3 .courses .cours, .section2 .cards .card, .sec2AU .Main .bOx{
     position: relative;
     display: flex;
     flex-direction: column;
@@ -133,14 +128,14 @@
     word-wrap: break-word;
 }
 
-.section3 .courses .cours .button{
+.section3 .courses .cours .button, .discription .button{
     background: rgb(64, 111, 172);
     padding: 2%;
     margin: 4% 0;
     color: whitesmoke;
-    border-radius: 10px;
-    border-top: 2px solid rgba(255, 255, 255, .8);
-    border-left: 2px solid rgba(255, 255, 255, .8);
+    border-radius: 5px;
+    border-top: 1px solid rgba(255, 255, 255, .8);
+    border-left: 1px solid rgba(255, 255, 255, .8);
     box-shadow: 2px 2px 10px rgba(0, 0, 0, .8);
     cursor: pointer;
     text-decoration: none;
@@ -150,10 +145,10 @@
     transition: .2s;
 }
 
-.section3 .courses .cours .button:hover{
+.section3 .courses .cours .button, .discription .btn .button:hover{
     letter-spacing: 2px;
 }
-.section3 .notice{
+.section3 .notice, .sec1AU .notice{
     position: relative;
     /* background: salmon; */
     margin-top: 4%;
@@ -164,7 +159,7 @@
     align-items: center;
 }
 
-.section3 .notice .eng{
+.section3 .notice .eng, .heading .notice .eng{
     text-align: center;
     font-size: 1.2rem;
     color: red;
@@ -228,331 +223,317 @@
 /* section2 css over */
 
 
-/* footer css start */
-.footer{
-    background: rgba(255, 218, 185, 0.678);
-    display: flex;
-    padding: 1%;
-    flex-direction: column;
-}
-
-.footer .boxes{    
+/* ============ABOUT US CSS START============ */
+.heading{
     position: relative;
+    /* background: gray; */
+    width: 100%;
     display: flex;
-    /* background: white; */
-    margin: 0%;
-    display: flex;
-    justify-content: space-around;
-    align-items: cetner;
+    justify-content: space-between;
 }
 
-.footer .boxes .box{
-    width: 40vw;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 2%;
-    margin: 0 1%;
-    border-radius: 20px;
-    box-shadow: 20px 20px 50px rgba(0, 0, 0, .8);    
-    border-top: 2px solid rgba(255, 255, 255, .5);
-    border-left: 2px solid rgba(255, 255, 255, .5);
-    backdrop-filter: blur(10px);
-    overflow: hidden;
+.heading .notice{
+    margin-top: 0;
 }
 
-.footer .boxes .box h1{
-    text-align: center;
+.heading .notice .eng{
+    font-size: .9rem;
+    text-align: right;
+    font-weight: 600;
+}
+
+.heading h1{
+    font-size: 1.5rem;
+    margin-top: 1%;
+    letter-spacing: 2px;
+}
+
+.discription p, .about .main .div p{
+    margin-top: 1%;
+    font-size: 1rem;
+    text-align: justify;
+    letter-spacing: 1px;
+}
+
+.discription .btn{
+    position: relative;
+    /* background: gray; */
+    margin: 1.2% 0;
+    display: flex;
+}
+
+.discription .btn .button{
+    background: rgb(64, 111, 172);
+    padding: .5% 1%;
+    color: whitesmoke;
+    border-radius: 5px;
+    border-top: 1px solid rgba(255, 255, 255, .8);
+    border-left: 1px solid rgba(255, 255, 255, .8);
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, .8);
+    cursor: pointer;
+    text-decoration: none;
+    font-size: .8rem;
+    /* font-weight: bold; */
+    letter-spacing: 1px;
+    transition: .2s;
+    position: relative;
+    margin: 0;
+}
+
+.about{
+    /* background: grey; */
+    display: flex;
+    margin-top: 2%;
+}
+
+.about .image image{
+    height: 100%;
+}
+
+.about .main{
+    /* background: burlywood; */
+    padding-left: 5%;
+}
+
+.about .main .div{
+    text-align: justify;
+    margin-top: 3%;
+    /* background:rgb(67, 97, 196); */
+}
+
+.about .main .div h1{
+    font-size: 1.5rem;
+    letter-spacing: 2px;
+}
+
+.sec2AU .Main{
+    /* background: grey; */
+    display: flex;
+    justify-content: space-between;
+}
+
+.sec2AU .bOx{
+    position: relative;
+    width: 45%;
+    padding: 1%;
+}
+
+.sec2AU .bOx h1{
     font-size: 2rem;
 }
 
-.footer .boxes .box p{
-    margin-top: 5%;
+.sec2AU .bOx p, .sec2AU .Main .value ul li{
+    font-size: 1rem;
+    text-align: justify;
+    margin-top: 2%;
+}
+
+.sec2AU .Main .value ul li{
+    list-style-position: inside;
+}
+
+.sec2AU .hover{
+    /* background: aliceblue; */
+    margin: 2% 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.sec2AU .hover .Div{
+    margin: 0 2%;
+    height: 6vh;
+    width: 23%;
+    padding-bottom: 1%;
+    background: rgb(233, 108, 63);
+    border-radius: 20px;
+    filter: drop-shadow(40px 20px 60px rgba(0, 0, 0, 0.4));
+    transition: .5s ease-in-out;
+    overflow: hidden;
+}
+
+.sec2AU .hover .Div3, .sec2AU .hover .Div4{
+    height: 11vh;
+}
+
+.sec2AU .hover .Div .content h2{
+    font-size: 1.7rem;
+    letter-spacing: 2px;
+    color: peachpuff;
+}
+
+.sec2AU .hover .Div .content .cont{
+    font-size: 1rem;    
+    text-align: justify;
+    /* background: white; */
+    margin: 0 5%;
+    transition: .5s ease-in-out;
+    /* opacity: 0; */
+}
+
+.sec2AU .hover .Div .content .cont p{
+    color: whitesmoke;    
+    line-height: 22px;
+    text-align: justify;
+    font-size: .8rem;
+}
+
+.sec2AU .hover .Div:hover{
+    height:  44vh;    
+}
+
+/* ============ABOUT US CSS OVER============ */
+
+
+
+/* ============COURSE-BCA CSS START============ */
+
+.secCrs .text{
+    position: relative;
+    /* background: grey; */
+    margin: 2% 0;
+    padding: 0%;
     text-align: justify;
 }
 
-.footer .boxes .box3 .social-icon{
-    position: relative;
-    /* background: gray; */
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 10%;
-}
-
-.footer .boxes .box3 .social-icon h3{
-    text-align: center;
-    letter-spacing: 2px;
-}
-
-.footer .boxes .box3 .social-icon ul{
-    display: flex;
-    justify-content: space-around;
-    margin-top: 5%;
-}
-
-.footer .boxes .box3 .social-icon ul li{
-    list-style-type: none;
-}
-
-.footer .boxes .box3 .social-icon ul li a{
-    text-decoration: none;
-    transition: .2s ease-in-out;
-}
-
-.footer .boxes .box3 .social-icon ul li img{
-    height: 60%;
-    width: 75%;
-    transition: .2s ease-in-out;
-}
-
-.footer .boxes .box3 .social-icon ul li a:hover img{
-    height: 55%;
-    width: 70%;
-}
-
-.footer .boxes .box4 ul{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 5%;
-}
-
-.footer .boxes .box4 ul li{
-    list-style-type: none;
-    margin: 10% 0;
-}
-
-.footer .boxes .box4 ul li a{
-    color:rgba(0, 0, 0, .7);
+.secCrs .text p{
     font-size: 1rem;
-    letter-spacing: 1px ;
-    text-decoration: none;
-    transition: .2s ease-in;
+    letter-spacing: 1px;
 }
 
-.footer .boxes .box4 ul li a:hover{
-    letter-spacing: 2px;
-    font-weight: bold;
-    font-style: italic;
-    font-size: 1.2rem;
-    color:rgba(0, 0, 0, .9);
-}
-
-.footer .copyright{
-    /* background: gray; */
-    width: 95vw;
+.secCrs .slbsMain{
+    /* background: grey; */
     display: flex;
-    justify-content: space-between;
-    margin: 2% 1% 0 1%;
-}
-/* footer css over */
-
-/* responsive code start*/
-
-/* responsive code start*/
-
-@media screen and (max-width: 1102px){
-    .section3, .section2{
-        padding: 1% 0%;
-    }
-    .section3 .info p, .section2 .info p{
-        font-size: 1rem;
-    }
-    .section3 .courses .cours .link, .section3 .courses .cours p, .section2 .cards .card p, .footer .boxes .box p, .section3 .courses .cours .button, .section3 .notice .eng{
-        font-size: .8rem;
-    }
-    .section2 .cards .card h1, .footer .boxes .box h1{
-        font-size: 1.5rem;
-    }
-    .footer .boxes .box3 .social-icon h3, .footer .copyright h3, .footer .copyright h4{
-        font-size: 1rem;
-    }
-    .footer .boxes .box4 ul li a{
-        font-size: .9rem;
-    }
-    .footer .boxes .box4 ul li a:hover{
-        font-size: 1rem;
-    }
+    flex-direction: column;
+    width: 100%;
 }
 
-@media screen and (max-width: 963px){
-    .section3, .section2{
-        padding: 1%;
-    }        
+.secCrs .slbsMain .boX{
+    display: flex;
 }
 
-@media screen and (max-width: 850px){
-    .section3, .section2{
-        padding: 1% 4%;
-    }
+.secCrs .slbsMain .b1{
+    position: relative;
+    background: rgba(255, 218, 185, 0.719);
+    border-left: 4px solid rgba(0, 0, 0, .7);
+    width: 70%;
+    padding: 1%;
+}
 
-    .section3, .section2, .footer{
-        flex-direction: column;
-        /* padding-left: 10%; */
-    }
+.secCrs .slbsMain .b1 p{
+    font-size: .8rem;
+    text-align: justify;
+}
 
-    .section3 .info p, .section2 .info p{
-        font-size: 1rem;
-    }
+.secCrs .slbsMain .b2{
+    position: relative;
+    background: none;
+    border-right: 13px solid rgba(0, 0, 0, .5);
+    border-top-right-radius: 60px;
+    border-bottom-right-radius: 60px;
+    width: 30%;
+    padding: 1%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
-    .section3 .courses, .section2 .cards, .footer .boxes{
-        flex-direction: column;
-        padding: 1%;
-    }
+.secCrs .slbsMain .animation{    
+    position: relative;
+    /* margin-top: 1%; */
+    /* background: cadetblue; */
+    height: 45vh;
+    padding: 8%;
+}
 
-    .section3 .courses .cours, .section2 .cards .card, .footer .boxes .box{
-        padding: 0;
-        margin: 3% 0;
-    }
+.secCrs .slbsMain .animation .mAin{
+    position: relative;
+    display: flex;
+    /* background: white; */
+    align-items: center;
+    justify-content: center;
+}
 
-    .footer .boxes .box{
-        width: 50vw;
-        margin: 3% auto;
-    }
+.secCrs .slbsMain .animation .mAin .tExt{
+    position: relative;
+    font-size: 3rem;
+    letter-spacing: 3px;
+    animation: color 3s infinite;
+}
 
-    .section3 .courses .cours img{
-        height: 10%;
-        width: 30%;
-        margin-top: 2%;
+@keyframes color {
+    0%{
+        color: darkslategray;
     }
+    50%{
+        color: green;
+    }
+    100%{
+        color: darkslategray;
+    }
+}
 
-    .section3 .courses .cours p{
-        margin: 3% 2%;
-    }
+.secCrs .slbsMain .animation .mAin ul{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    /* background: skyblue; */
+    margin: 0 10%;
+    height: 8vh;
+    /* overflow: hidden; */
+}
 
-    .section3 .courses .cours .button{
-        padding: 1.5%;
-        margin: 2% 0;
-        font-size: .8rem;
-    }
+.secCrs .slbsMain .animation .mAin ul li{
+    position: absolute;
+    list-style-type: none;
+    font-size: 3rem;
+    letter-spacing: 3px;
+    visibility: hidden;
+    opacity: 0;
+    color: maroon;
+    /* background: grey; */
+    transition: .2s ease-in-out;
+    animation: slide 9s infinite;
+}
 
-    .section3 .notice .eng{
-        font-size: 1rem;
-    }
+.secCrs .slbsMain .animation .mAin ul li:nth-child(1){
+    animation-delay: 0s;
+}
 
-    .section2 .cards .card h1{
-        transform: translateY(0);
-    }
+.secCrs .slbsMain .animation .mAin ul li:nth-child(2){
+    animation-delay: 3s;
+}
 
-    .section2 .cards .card p{
-        transform: translateY(0);
-    }
+.secCrs .slbsMain .animation .mAin ul li:nth-child(3){
+    animation-delay: 6s;
+}
 
-    .footer .boxes .box{
-        width: 80vw;
+@keyframes slide {
+    20%{
+        visibility: hidden;
+        opacity: 0;
+        transform: translateY(20%);
     }
-
-    .footer .boxes .box h1{
-        margin-top: 2%;
+    40%{        
+        visibility: visible;
+        opacity: .5;
     }
-
-    .footer .boxes .box p{
-        margin-top: 2%;
+    60%{
+        visibility: visible;
+        transform: translateY(-10%);
+        opacity: 1;
     }
-
-    .footer .boxes .box3 .social-icon, .footer .boxes .box4 ul{
-        margin-top: 0;
-        margin-bottom: 2%;
-        /* background: gray; */
-    }
-    
-    .footer .boxes .box3 .social-icon ul li a{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .footer .boxes .box3 .social-icon ul li a img{
-        height: 30%;
-        width: 25%;
-    }
-
-    .footer .copyright{
-        /* background: gray; */
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
+    80%{
+        visibility: hidden;
+        transform: translateY(-10%);
+        opacity: 0;
     }    
-}
-
-@media screen and (max-width: 600px){
-    .section3, .section2, .footer{
-        flex-direction: column;
-        /* padding-left: 10%; */
-    }
-
-    .section3 .info p, .section2 .info p{
-        font-size: 1rem;
-    }
-
-    .section3 .courses, .section2 .cards, .footer .boxes{
-        flex-direction: column;
-        padding: 1%;
-    }
-
-    .section3 .courses .cours, .section2 .cards .card{
-        margin: 3% 0;
-    }
-
-    .footer .boxes .box{
-        width: 50vw;
-        margin: 3% auto;
-    }
-
-    .section3 .courses .cours img{
-        height: 10%;
-        width: 40%;
-    }
-
-    .section3 .courses .cours p{
-        margin: 5% 3%;
-    }
-
-    .section3 .courses .cours .button{
-        margin: 2% 0;
-        font-size: .8rem;
-    }
-
-    .section3 .notice .eng{
-        font-size: 1rem;
-    }
-
-    .section2 .cards .card h1{
-        transform: translateY(0);
-    }
-
-    .section2 .cards .card p{
-        transform: translateY(0);
-    }
-
-    .footer .boxes .box{
-        width: 80vw;
-    }
-
-    /* .footer .boxes .box3 .social-icon ul{
-        background: gray;
-    } */
-    
-    .footer .boxes .box3 .social-icon ul li a{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .footer .boxes .box3 .social-icon ul li a img{
-        height: 25%;
-        width: 25%;
-    }
-
-    .footer .copyright{
-        /* background: gray; */
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
+    100%{
+        visibility: hidden;
+        opacity: 0;
     }
 }
-
-/* responsive code over */
-
+/* ============COURSE-BCA CSS OVER============ */
 /* section3 css over */
